enhanced StubAsyncEventQueueFactory for 7.0.1