@@ -224,8 +224,19 @@ artifacts {
 }
 
 task wrapper(type: Wrapper) {
-    description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '1.0'
+  description = "Generates gradlew[.bat] scripts"
+  gradleVersion = "1.3"
+
+  doLast() {
+    def gradleOpts = "-XX:MaxPermSize=1024m -Xmx1024m"
+    def gradleBatOpts = "$gradleOpts -XX:MaxHeapSize=256m"
+    File wrapperFile = file("gradlew")
+    wrapperFile.text = wrapperFile.text.replace("DEFAULT_JVM_OPTS=",
+                                                "GRADLE_OPTS=\"$gradleOpts \$GRADLE_OPTS\"\nDEFAULT_JVM_OPTS=")
+    File wrapperBatFile = file("gradlew.bat")
+    wrapperBatFile.text = wrapperBatFile.text.replace("set DEFAULT_JVM_OPTS=",
+                                                      "set GRADLE_OPTS=$gradleBatOpts %GRADLE_OPTS%\nset DEFAULT_JVM_OPTS=")
+  }
 }
 
 assemble.dependsOn = ['jar', 'sourcesJar']
